--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = ansible.inventory
-private_key_file = ../keys/mykey
+private_key_file = ../keys/id_rsa
 remote_user=tom
 host_key_checking = False
 deprecation_warnings = False
